--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <a href="https://github.com/jkmloom/KukoAI" class="btn" target="_blank">
                     View AI Source Code
                 </a>
-                <a href="INSERT_WEBSITE_REPO_LINK_HERE" class="btn" target="_blank">
+                <a href="https://github.com/abicharak/kukoaiweb" class="btn" target="_blank">
                     View Website Source
                 </a>
             </div>
@@ -356,4 +356,5 @@
         });
     </script>
 </body>
+
 </html>
